web-infras/parser/tests/fixtures/esprima/ES6/destructuring-assignment/invalid-cover-grammar/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,22)
1|[[[[[[[[[[[[[[[[[[[[{a=b}]]]]]]]]]]]]]]]]]]]]
 |                    ^
